--- a/redirector/Cargo.toml
+++ b/redirector/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
-# Redirector
+# Network
 tokio = { version = "1.40.0", features = ["net", "tracing", "rt", "rt-multi-thread", "macros", "io-util"] }
-
+tarpc = { version = "0.34.0", features = ["full"] }
+futures = "0.3"
 
 # Logging
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 tracing-appender = "0.2.3"
+time = "0.3.36"
