--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -1,10 +1,8 @@
 name: Testing
 
 on:
-  push:
-    branches: [ $default-branch ]
   pull_request:
-    branches: [ $default-branch ]
+    types: [opened]
 
 env:
   CARGO_TERM_COLOR: always
