fix tests in actions

--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -14,8 +14,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: test_redirector
-      run: cd redirector; cargo test --verbose
-    - name: test_rules
-      run: cd ../rulelib; cargo test --verbose
+    - name: test
+      run: cargo test --verbose
 
