--- a/redirector/Cargo.toml
+++ b/redirector/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
+anyhow = "1.0.89"
 # Network
 tokio = { version = "1.40.0", features = ["net", "tracing", "rt", "rt-multi-thread", "macros", "io-util"] }
 tarpc = { version = "0.34.0", features = ["full"] }
@@ -15,3 +16,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 tracing-appender = "0.2.3"
 time = "0.3.36"
+
+# DB
+rusqlite = "0.32.1"
+serde = { version = "1.0.210", features = ["derive"] }
