--- a/redirector/Cargo.toml
+++ b/redirector/Cargo.toml
@@ -20,3 +20,6 @@ time = "0.3.36"
 # DB
 rusqlite = "0.32.1"
 serde = { version = "1.0.210", features = ["derive"] }
+
+# Services interface
+shared = { path = "../shared" }
