streaming with control over bytes sort of working?

--- a/redirector/Cargo.toml
+++ b/redirector/Cargo.toml
@@ -23,3 +23,5 @@ serde = { version = "1.0.210", features = ["derive"] }
 
 # Services interface
 shared = { path = "../shared" }
+tokio-stream = {version = "0.1.16", features = ["net"]}
+tokio-util = {version = "0.7.12", features = ["io"]}
